# posym-normal-modes

./: .gitignore  README.md  pyproject.toml
src/posym/: __init__.py
src/posym/operations/: __init__.py
src/posym_normal_modes/: __init__.py  generate_tables.py  ir_tables.py  permutations.py  pointgroup.py  tools.py
src/posym_normal_modes/operations/: __init__.py  identity.py  inversion.py  irotation.py  reflection.py  rotation.py
src/posym_normal_modes/symmetry/: base.py  modes.py  molecule_base.py  symmetry.py
test/: test_acetylene.py  test_ethane.py  test_methane.py  test_normal_modes.py
test/geometries/: test_methane_geom.py  test_water_geom.py
test/modes/: test_einsum.py  test_ethane.py  test_ethylene.py  test_water_modes.py
