[tool.poetry]
name = "posym-normal-modes"
version = "0.1.0"
description = "Point-group symmetry detection of normal modes."
authors = ["Peter Koval <koval.peter@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "posym", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.0.2"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
